Fix overflow in mobile

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -588,7 +588,7 @@ blockquote {
   .modal-inner:not(.draw-mb) {
     max-width: unset;
     max-height: calc(100vh - 100px);
-    overflow: hidden;
+    overflow: auto;
     margin: unset;
     top: auto;
     border-radius: var(--img-rounded) var(--img-rounded) 0 0;
